--- a/treebolicFilesServices/src/main/res/values-fr/strings.xml
+++ b/treebolicFilesServices/src/main/res/values-fr/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name">Services Treebolic Système de Fichiers</string>
     <string name="files">Fichiers</string>
 
     <!-- title -->
