--- a/treebolicFilesServices/src/main/res/values/strings.xml
+++ b/treebolicFilesServices/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_finish">Finish</string>
     <string name="title_kill">Kill</string>
     <string name="title_settings">Settings</string>
-    <string name="title_activity_app_settings">Application settings</string>
+    <string name="title_activity_app_settings">Application</string>
 
     <!-- errors -->
     <string name="fail_nullquery">Null query</string>
