--- a/treebolicOwlServices/src/main/res/values-fr/strings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings.xml
@@ -14,7 +14,7 @@
     <string name="description_service_messenger_bound_service">Produit un modèle Treebolic à partir de données OWL (Messenger Bound Service)</string>
 
     <!-- title -->
-    <string name="title_settings">Settings</string>
+    <string name="title_settings">Paramètres</string>
     <string name="title_activity_app_settings">Application</string>
     <string name="title_query">Lancer</string>
     <string name="title_source">Source</string>
