--- a/treebolicFilesServices/src/main/res/values/strings.xml
+++ b/treebolicFilesServices/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
 	<string name="files">Files</string>
 
 	<!-- title -->
-	<string name="title_query">Run</string>
+	<string name="title_run">Run</string>
 	<string name="title_source">Source</string>
+	<string name="title_places">Places</string>
 	<string name="title_demo">Demo</string>
 	<string name="title_finish">Finish</string>
 	<string name="title_settings">Settings</string>
