--- a/treebolicWordNetServices/src/main/res/values/strings.xml
+++ b/treebolicWordNetServices/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
 	<string name="title_cleanup">Clean up WordNet</string>
 	<string name="title_demo">Demo</string>
 	<string name="title_finish">Finish</string>
+	<string name="title_kill">Terminate</string>
 	<string name="title_settings">Settings</string>
 	<string name="title_activity_app_settings">Application</string>
 	<string name="title_status_data_available">Data available status</string>
