--- a/treebolicClientsLib/src/main/res/values-fr/strings.xml
+++ b/treebolicClientsLib/src/main/res/values-fr/strings.xml
@@ -5,7 +5,9 @@
 
 <resources>
 
-	<!-- ok/errors -->
+	<string name="started">Démarré</string>
+
+	<!-- errors -->
 	<string name="fail_bind">Échec lors de la connexion au service</string>
 	<string name="fail_start">Échec lors du démarrage du service</string>
 	<string name="fail_nullquery">Requête nulle</string>
