--- a/treebolicClientsLib/src/main/res/values/strings.xml
+++ b/treebolicClientsLib/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
 
 <resources>
 
-	<!-- ok/errors -->
+	<string name="started">Started</string>
+
+	<!-- errors -->
 	<string name="fail_bind">Failed to bind to service</string>
 	<string name="fail_start">Failed to start service</string>
 	<string name="fail_nullquery">Null query</string>
