--- a/treebolicOwlServices/src/main/res/values-fr/strings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings.xml
@@ -7,12 +7,12 @@
 	<string name="app_name">Treebolic Services OWL</string>
 
 	<!-- services -->
-	<string name="service_intent_service">Treebolic OWL Intent Service</string>
+	<string name="service_broadcast_service">Treebolic OWL Broadcast Service</string>
 	<string name="service_aidl_bound_service">Treebolic OWL AIDL-based Bound Service</string>
 	<string name="service_messenger_bound_service">Treebolic OWL Messenger Bound Service</string>
 
 	<!-- service descriptions -->
-	<string name="description_service_intent_service">Produit un modèle Treebolic à partir de  données OWL (Intent Service)</string>
+	<string name="description_service_broadcast_service">Produit un modèle Treebolic à partir de  données OWL (Broadcast Service)</string>
 	<string name="description_service_aidl_bound_service">Produit un modèle Treebolic à partir de données OWL (AIDL-based Bound Service)</string>
 	<string name="description_service_messenger_bound_service">Produit un modèle Treebolic à partir de données OWL (Messenger Bound Service)</string>
 
