--- a/treebolicOwlServices/src/main/res/values-fr/strings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings.xml
@@ -18,6 +18,7 @@
 
 	<!-- title -->
 	<string name="title_settings">Paramètres</string>
+	<string name="title_settings_service">Réglages pour service</string>
 	<string name="title_activity_app_settings">Application</string>
 	<string name="title_query">Lancer</string>
 	<string name="title_source">Source</string>
