--- a/treebolicOwlServices/src/main/res/values/strings.xml
+++ b/treebolicOwlServices/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 
 	<!-- title -->
 	<string name="title_settings">Settings</string>
+	<string name="title_settings_service">Settings for service</string>
 	<string name="title_activity_app_settings">Application</string>
 	<string name="title_query">Run</string>
 	<string name="title_source">Source</string>
