--- a/treebolicOwlServices/src/main/res/values-fr/strings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings.xml
@@ -18,13 +18,16 @@
 
 	<!-- title -->
 	<string name="title_settings">Paramètres</string>
-	<string name="title_settings_service">Réglages pour service</string>
 	<string name="title_activity_app_settings">Application</string>
 	<string name="title_query">Lancer</string>
 	<string name="title_source">Source</string>
 	<string name="title_demo">Démo</string>
 	<string name="title_finish">Finir</string>
 	<string name="title_kill">Terminer</string>
+
+	<!-- preferences -->
+	<string name="pref_title_service">Service</string>
+	<string name="pref_description_service">Type de service</string>
 
 	<!-- ok/errors -->
 	<string name="fail_nullquery">Requête nulle</string>
