--- a/treebolicFilesServices/src/main/res/values/strings.xml
+++ b/treebolicFilesServices/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 	<string name="title_finish">Finish</string>
 	<string name="title_kill">Kill</string>
 	<string name="title_settings">Settings</string>
+	<string name="title_settings_service">Settings for service</string>
 	<string name="title_activity_app_settings">Application</string>
 	<string name="title_choose">Choose</string>
 	<string name="title_choose_directory">Choose directory</string>
