--- a/treebolicWordNetServices/src/main/res/values/strings.xml
+++ b/treebolicWordNetServices/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 	<string name="title_finish">Finish</string>
 	<string name="title_kill">Terminate</string>
 	<string name="title_settings">Settings</string>
+	<string name="title_settings_service">Settings for service</string>
 	<string name="title_activity_app_settings">Application</string>
 	<string name="title_status_data_available">Data available status</string>
 	<string name="title_choose">Choose</string>
